@@ -1,3 +1,8 @@
+2004-02-24  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>
+
+	* gtk/gtkmodule.c, gtk/pygtk.h: Make pygdk_rectangle_from_pyobject
+	a public API function.  Fixes #135279.
+
 2004-02-24  Johan Dahlin  <johan@gnome.org>
 
 	* gtk/gtk.override (_wrap_gtk_stock_list_ids): Plug a leak.
